<resources>
    <string name="app_name">Examen</string>
    <string name="title_activity_actividad2">Actividad2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Empleados">Empleados</string>
    <string name="Cedula">Ruc</string>
    <string name="Nombres">Nombre Comercial</string>
    <string name="Apellidos">Representante Legal</string>
    <string name="Fecha_Contrato">Direccion</string>
    <string name="Salario">Telefono</string>
    <string name="Discapacidad">Producto</string>
    <string name="Horario">Credito</string>
    <string name="Guardar">Guardar</string>
    <string name="Ingresar">Ingresar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
